Load samples from mock CSV

--- a/src/PgPartner.SampleApp/PgPartner.SampleApp.csproj
+++ b/src/PgPartner.SampleApp/PgPartner.SampleApp.csproj
@@ -9,4 +9,10 @@
     <ProjectReference Include="..\PgPartner\PgPartner.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="MockData\MOCK_DATA.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
