--- a/src/PgPartner/PgPartner.csproj
+++ b/src/PgPartner/PgPartner.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>9.0</LangVersion>
     <Authors>SourceKor, Oleg Krysko</Authors>
+    <Company>SourceKor</Company>
     <Description>Npgsql extensions that simplify bulk operations</Description>
     <RepositoryUrl>https://github.com/SourceKor/PgPartner</RepositoryUrl>
     <PackageProjectUrl>https://github.com/SourceKor/PgPartner</PackageProjectUrl>
@@ -12,7 +13,6 @@
     <IncludeSource>True</IncludeSource>
     <IncludeSymbols>True</IncludeSymbols>
     <PackageTags>postgres, postgresql, npgsql, npgsql-copy, postgresql-copy, bulkadd</PackageTags>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageIcon>PgPartner.png</PackageIcon>
   </PropertyGroup>
 
