Try adjusting artifacts download path

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -71,6 +71,7 @@ stages:
           - download: current
             displayName: Download Release Artifacts
             artifact: NuGetPackage
+            path: $(Pipeline.Workspace)/Release
           - bash: ./cicd/deploy.sh $(NUGET_KEY)
             displayName: Deploy
     
